[tool.poetry]
name = "reverse-proxy"
version = "0.6.0"
description = "Over-engineered Reverse-proxy using FastAPI"
authors = ["itssoap <admin@itssoap.ninja>"]
readme = "README.md"
packages = [{include = "*.py", from = "reverse-proxy"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
httpx = "^0.23.3"
aioredis = "^2.0.1"
datetime = "^5.1"
gunicorn = "^20.1.0"
psutil = "^5.9.4"
loguru = "^0.6.0"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
inotify = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
